--- a/css/main.css
+++ b/css/main.css
@@ -82,11 +82,27 @@ body {
   font-size: 16pt;
 }
 .nav-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  width: auto;
+  display: flex;
+  align-items: center;
   position: absolute;
   left: 50%;
+}
+@media (max-width: 1025px) {
+  .nav-list {
+    flex-direction: column;
+    font-size: 12pt;
+    position: absolute;
+    top: 8px;
+    right: 120px;
+  }
+}
+@media (max-width: 1100px) {
+  .nav-list {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 45%;
+  }
 }
 
 /* Now Playing */
@@ -106,6 +122,16 @@ body {
   font-size: 50pt;
   align-items: center;
 }
+@media (max-width: 400px) {
+  .big-header {
+    font-size: 20pt;
+  }
+}
+@media (max-width: 800px) {
+  .big-header {
+    font-size: 34pt;
+  }
+}
 .week {
   display: flex;
   flex-direction: row;
@@ -113,9 +139,29 @@ body {
 }
 .film-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 0.2px;
-  overflow-x: wrap;
+  grid-template-columns: repeat(auto-fill, minmax(415px, 1fr));
+  grid-gap: 30px;
+}
+@media query (min: 800px) {
+  .film-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 30px;
+  }
+}
+@media query (min: 607px) {
+  .film-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-gap: 30px;
+  }
+}
+@media query (min: 300px) {
+  .film-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+    grid-gap: 30px;
+  }
 }
 .img {
   width: 100%;
@@ -141,19 +187,30 @@ body {
   grid-gap: 20px;
   background-color: #81d8dd;
 }
+@media (max-width: 825px) {
+  .b-container {
+    display: inline-grid;
+    grid-template-columns: repeat(auto-fill, minmax(415px, 1fr));
+    grid-gap: 20px;
+  }
+}
 .b-container-2 {
   display: grid;
   grid-template-columns: 1fr 2fr;
   background-color: #ffc532;
+}
+@media (max-width: 825px) {
+  .b-container-2 {
+    display: inline-grid;
+    grid-template-columns: repeat(auto-fill, minmax(415px, 1fr));
+    grid-gap: 20px;
+  }
 }
 .b-cell .b-cell-r {
   padding: 10px;
 }
 .b-cell-r {
   text-align: right;
-}
-.second {
-  width: 100;
 }
 
 /* Coming Soon */
