--- a/css/main.css
+++ b/css/main.css
@@ -156,16 +156,17 @@ body {
     grid-gap: 30px;
   }
 }
-@media query (min: 300px) {
+@media query (max: 351px) {
   .film-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+    grid-template-columns: 1fr;
     grid-gap: 30px;
   }
+  img {
+    max-width: 80px;
+  }
 }
-.img {
-  width: 100%;
-}
+
 .icon {
   max-width: 16px;
 }
